k8s/manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: php-nginx-k8s
  namespace: php-nginx-k8s
spec:
  selector:
    app: php-nginx-k8s
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
