k8s/manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-nginx-k8s-ingress
  namespace: php-nginx-k8s
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: php-nginx-k8s.local
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: php-nginx-k8s
                port:
                  number: 80
